[project]
name = "learn-claude-code"
version = "1.0.0"
description = "A learning project for understanding Claude Code internals through documentation and hands-on Python experiments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["claude-code", "agent", "llm", "education", "anthropic"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["experiments", "examples"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise without from (acceptable in experiments)
    "SIM108", # ternary operator (readability in teaching code)
    "UP007",  # X | Y union syntax (already used, but allow Optional too)
]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.pytest.ini_options]
testpaths = ["experiments"]
pythonpath = ["experiments"]
